--- a/kara-backend/package.json
+++ b/kara-backend/package.json
@@ -14,8 +14,10 @@
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
     "express": "^4.16.4",
+    "jsonwebtoken": "^8.4.0",
     "mongoose": "^5.3.16",
     "morgan": "^1.9.1",
-    "nodemailer": "^4.7.0"
+    "nodemailer": "^4.7.0",
+    "socket.io": "^2.2.0"
   }
 }
