--- a/kara-backend/package.json
+++ b/kara-backend/package.json
@@ -2,7 +2,7 @@
   "name": "kara-backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -15,7 +15,7 @@
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "jsonwebtoken": "^8.4.0",
-    "mongoose": "^5.3.16",
+    "mongoose": "^5.4.1",
     "morgan": "^1.9.1",
     "nodemailer": "^4.7.0",
     "socket.io": "^2.2.0"
